añadiendo al modal del botón buscar filtro para los sindicatos y las industrias

--- a/views/home.html
+++ b/views/home.html
@@ -48,20 +48,55 @@
           </button>
         </div>
         <div class="modal-body">
-            <div class="form-group">
-                <label for="exampleFormControlSelect1">Empresa</label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Empresa</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect2">Sindicato</label>
+            <select class="form-control" id="exampleFormControlSelect2">
+              <option>STAPMTIS</option>
+              <option>SINTRAPANA</option>
+              <option>SINTRAGROKASA</option>
+              <option>SINTRAHOSHEP</option>
+              <option>SUTRAEAC</option>
+              <option>SUTRAMPORPC</option>
+              <option>SUTEECEA</option>
+              <option>SITSTATKRAFT</option>
+              <option>SUTREL</option>
+              <option>SUTREP</option>
+              <option>SINTRASUR</option>
+              <option>SINERELIMA</option>
+              <option>SINORELIMA</option>
+              <option>SINEDUNAS</option>
+              <option>SECCIÓN SINDICAL DE SUTREL</option>
+              <option>SINTRAGEL</option>
+              <option>SITECASA</option>
+              <option>SINTRACLUNA</option>
+              <option>SINTRAAOPIP</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect3">Industria</label>
+            <select class="form-control" id="exampleFormControlSelect3">
+              <option>Logistica y transporte</option>
+              <option>Papel y derivados</option>
+              <option>Agroindustria</option>
+              <option>Hoteles</option>
+              <option>Energía</option>
+              <option>Clubes</option>
+            </select>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-primary">Filtrar</button>
+          </div>
         </div>
-        <div class="modal-footer">
-          
-          <button type="button" class="btn btn-primary">Filtrar</button>
         </div>
       </div>
     </div>
