--- a/views/search.html
+++ b/views/search.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <!-- Bootstrap core CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/token-input.css" type="text/css" />
   <link href="../css/main.css" rel="stylesheet">
@@ -17,8 +18,11 @@
   <section class="main">
    <div class="container search">
       <div class="input-group">
-        <input id="typesRestaurant" type="text" class="form-control token-input">
+        <input  type="text" class="form-control token-input">
         <span class="input-group-btn">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
           <button class="btn btn-default" id="buscar" type="button">
               <i class="fas fa-search"></i>
             </button>
