--- a/views/home.html
+++ b/views/home.html
@@ -28,8 +28,8 @@
       </div>
     </nav>
     <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-        <label class="form-check-label" for="defaultCheck1">
+        <input class="form-check-input" type="checkbox" value="" id="company-check">
+        <label class="form-check-label" for="company-check">
          Empresa
         </label>
       </div>
