--- a/views/home.html
+++ b/views/home.html
@@ -53,7 +53,7 @@
           </button>
         </div>
         <div class="modal-body">
-            <div class="form-group" id="company">
+            <div class="form-group hide" id="company"  >
                 <label for="exampleFormControlSelect1">Empresa</label>
                 <select class="form-control" id="exampleFormControlSelect1">
                   <option>APM Terminals Insland Services S.A.</option>
@@ -70,7 +70,7 @@
                   <option>Edelnor S.A.A.</option>
                 </select>
               </div>
-          <div class="form-group">
+          <div class="form-group hide">
             <label for="exampleFormControlSelect2">Sindicato</label>
             <select class="form-control" id="exampleFormControlSelect2">
               <option>STAPMTIS</option>
@@ -94,7 +94,7 @@
               <option>SINTRAAOPIP</option>
             </select>
           </div>
-          <div class="form-group">
+          <div class="form-group hide">
             <label for="exampleFormControlSelect3">Industria</label>
             <select class="form-control" id="exampleFormControlSelect3">
               <option>Logistica y transporte</option>
