--- a/views/home.html
+++ b/views/home.html
@@ -76,7 +76,7 @@
                   <option>Edelnor S.A.A.</option>
                 </select>
               </div>
-          <div class="form-group">
+          <div class="form-group" id="select-syndicates">
             <label for="exampleFormControlSelect2">Sindicato</label>
             <select class="form-control" id="exampleFormControlSelect2">
               <option>STAPMTIS</option>
@@ -100,7 +100,7 @@
               <option>SINTRAAOPIP</option>
             </select>
           </div>
-          <div class="form-group">
+          <div class="form-group" id="select-industries">
             <label for="exampleFormControlSelect3">Industria</label>
             <select class="form-control" id="exampleFormControlSelect3">
               <option>Logistica y transporte</option>
