--- a/views/home.html
+++ b/views/home.html
@@ -29,8 +29,8 @@
       </div>
     </nav>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-      <label class="form-check-label" for="defaultCheck1">Empresa</label>
+      <input class="form-check-input" type="checkbox" value="" id="company-check">
+      <label class="form-check-label" for="company-check">Empresa</label>
     </div>
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="checkbox" id="checkbox1" value="option1">
