--- a/views/home.html
+++ b/views/home.html
@@ -59,7 +59,7 @@
           </button>
         </div>
         <div class="modal-body">
-            <div class="form-group hide" id="company-check"  >
+            <div class="form-group hide" id="company"  >
                 <label for="exampleFormControlSelect1">Empresa</label>
                 <select class="form-control" id="exampleFormControlSelect1">
                   <option>APM Terminals Insland Services S.A.</option>
