--- a/views/home.html
+++ b/views/home.html
@@ -61,19 +61,19 @@
         <div class="modal-body">
             <div class="form-group hide" id="company"  >
                 <label for="exampleFormControlSelect1">Empresa</label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                  <option>APM Terminals Insland Services S.A.</option>
-                  <option>Papelera Nacional S.A. - PANASA</option>
-                  <option>Sociedad Agrícola Drokasa S.A.</option>
-                  <option>Hoteles Sheraton del Perú S.A.C.</option>
-                  <option>Enel Distribución Perú S.A.A</option>
-                  <option>APM Terminals Callao S.A.</option>
-                  <option>Luz del Sur. S.A.</option>
-                  <option>Statkraft Perú S.A.</option>
-                  <option>Red de Energía del Perú S.A.</option>
-                  <option>Club Regatas Lima</option>
-                  <option>Electro Dunas S.A.A.</option>
-                  <option>Edelnor S.A.A.</option>
+                <select class="form-control company-select" id="exampleFormControlSelect1">
+                  <option value="c1">APM Terminals Insland Services S.A.</option>
+                  <option value="c2">Papelera Nacional S.A. - PANASA</option>
+                  <option value="c3">Sociedad Agrícola Drokasa S.A.</option>
+                  <option value="c4">Hoteles Sheraton del Perú S.A.C.</option>
+                  <option value="c5">Enel Distribución Perú S.A.A</option>
+                  <option value="c6">APM Terminals Callao S.A.</option>
+                  <option value="c7">Luz del Sur. S.A.</option>
+                  <option value="c8">Statkraft Perú S.A.</option>
+                  <option value="c9">Red de Energía del Perú S.A.</option>
+                  <option value="c10">Club Regatas Lima</option>
+                  <option value="c11">Electro Dunas S.A.A.</option>
+                  <option value="c12">Edelnor S.A.A.</option>
                 </select>
               </div>
           <div class="form-group hide">
