--- a/views/home.html
+++ b/views/home.html
@@ -77,38 +77,38 @@
                 </select>
               </div>
           <div class="form-group hide"  id="select-syndicates">
-            <label for="exampleFormControlSelect2">Sindicato</label>
-            <select class="form-control" id="exampleFormControlSelect2">
-              <option>STAPMTIS</option>
-              <option>SINTRAPANA</option>
-              <option>SINTRAGROKASA</option>
-              <option>SINTRAHOSHEP</option>
-              <option>SUTRAEAC</option>
-              <option>SUTRAMPORPC</option>
-              <option>SUTEECEA</option>
-              <option>SITSTATKRAFT</option>
-              <option>SUTREL</option>
-              <option>SUTREP</option>
-              <option>SINTRASUR</option>
-              <option>SINERELIMA</option>
-              <option>SINORELIMA</option>
+            <label for="select-2">Sindicato</label>
+            <select class="form-control" id="select-2">
+              <option value="s-1" class=".option">STAPMTIS</option>
+              <option value="s-2" class=".option">SINTRAPANA</option>
+              <option value="s-3" class=".option">SINTRAGROKASA</option>
+              <option value="s-4" class=".option">SINTRAHOSHEP</option>
+              <option value="s-5" class=".option">SUTRAEAC</option>
+              <option value="s-6" class=".option">SUTRAMPORPC</option>
+              <option value="s-7" class=".option">SUTEECEA</option>
+              <option value="s-8" class=".option">SITSTATKRAFT</option>
+              <option value="s-9" class=".option">SUTREL</option>
+              <option value="s-10" class=".option">SUTREP</option>
+              <option value="s-11" class=".option">SINTRASUR</option>
+              <option value="s-12" class=".option">SINERELIMA</option>
+              <!-- <option>SINORELIMA</option>
               <option>SINEDUNAS</option>
               <option>SECCIÓN SINDICAL DE SUTREL</option>
               <option>SINTRAGEL</option>
               <option>SITECASA</option>
               <option>SINTRACLUNA</option>
-              <option>SINTRAAOPIP</option>
+              <option>SINTRAAOPIP</option> -->
             </select>
           </div>
           <div class="form-group hide"  id="select-industries">
-            <label for="exampleFormControlSelect3">Industria</label>
-            <select class="form-control" id="exampleFormControlSelect3">
-              <option>Logistica y transporte</option>
-              <option>Papel y derivados</option>
-              <option>Agroindustria</option>
-              <option>Hoteles</option>
-              <option>Energía</option>
-              <option>Clubes</option>
+            <label for="select-3">Industria</label>
+            <select class="form-control" id="select-3">
+              <option value="i-1">Logistica y transporte</option>
+              <option value="i-2">Papel y derivados</option>
+              <option value="i-3">Agroindustria</option>
+              <option value="i-4">Hoteles</option>
+              <option value="i-5">Energía</option>
+              <option value="i-6">Clubes</option>
             </select>
           </div>
           <div class="modal-footer">
