filtrar por año de suscripcion

--- a/views/home.html
+++ b/views/home.html
@@ -23,8 +23,7 @@
         
           <input class="form-control mr-sm-2 token-input" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" id="buscar" type="button">
-              <i class="fas fa-search"></i>
-
+            <i class="fas fa-search"></i>
           </button>
       </div>
     </nav>
@@ -39,6 +38,10 @@
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="checkbox" id="checkbox2" value="option2">
       <label class="form-check-label" for="checkbox2">Industria</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="suscription-check">
+      <label class="form-check-label" for="checkbox3">Suscripción</label>
     </div>
 <div>
   <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
@@ -59,23 +62,23 @@
           </button>
         </div>
         <div class="modal-body">
-            <div class="form-group hide" id="company"  >
-                <label for="exampleFormControlSelect1">Empresa</label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                  <option>APM Terminals Insland Services S.A.</option>
-                  <option>Papelera Nacional S.A. - PANASA</option>
-                  <option>Sociedad Agrícola Drokasa S.A.</option>
-                  <option>Hoteles Sheraton del Perú S.A.C.</option>
-                  <option>Enel Distribución Perú S.A.A</option>
-                  <option>APM Terminals Callao S.A.</option>
-                  <option>Luz del Sur. S.A.</option>
-                  <option>Statkraft Perú S.A.</option>
-                  <option>Red de Energía del Perú S.A.</option>
-                  <option>Club Regatas Lima</option>
-                  <option>Electro Dunas S.A.A.</option>
-                  <option>Edelnor S.A.A.</option>
-                </select>
-              </div>
+          <div class="form-group hide" id="company"  >
+            <label for="exampleFormControlSelect1">Empresa</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>APM Terminals Insland Services S.A.</option>
+              <option>Papelera Nacional S.A. - PANASA</option>
+              <option>Sociedad Agrícola Drokasa S.A.</option>
+              <option>Hoteles Sheraton del Perú S.A.C.</option>
+              <option>Enel Distribución Perú S.A.A</option>
+              <option>APM Terminals Callao S.A.</option>
+              <option>Luz del Sur. S.A.</option>
+              <option>Statkraft Perú S.A.</option>
+              <option>Red de Energía del Perú S.A.</option>
+              <option>Club Regatas Lima</option>
+              <option>Electro Dunas S.A.A.</option>
+              <option>Edelnor S.A.A.</option>
+            </select>
+          </div>
           <div class="form-group hide">
             <label for="exampleFormControlSelect2">Sindicato</label>
             <select class="form-control" id="exampleFormControlSelect2">
@@ -109,6 +112,17 @@
               <option>Hoteles</option>
               <option>Energía</option>
               <option>Clubes</option>
+            </select>
+          </div>
+          <div class="form-group hide" id="suscripcion">
+            <label for="exampleFormControlSelect3">Suscripción</label>
+            <select class="form-control" id="exampleFormControlSelect4">
+              <option>2018</option>
+              <option>2017</option>
+              <option>2016</option>
+              <option>2015</option>
+              <option>2014</option>
+              <option>2013</option>
             </select>
           </div>
           <div class="modal-footer">
