--- a/views/home.html
+++ b/views/home.html
@@ -97,6 +97,18 @@
       </div>
     </div>
     <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" value="" id="company-check">
+      <label class="form-check-label" for="company-check">Empresa</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="checkbox1" value="option1">
+      <label class="form-check-label" for="checkbox1">Sindicato</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="checkbox2" value="option2">
+      <label class="form-check-label" for="checkbox2">Industria</label>
+    </div>
+    <div class="form-check form-check-inline">
       <input class="form-check-input" type="checkbox" id="suscription-check">
       <label class="form-check-label" for="checkbox3">Suscripción</label>
     </div>
