--- a/css/home.css
+++ b/css/home.css
@@ -113,6 +113,14 @@ background-color: rgb( 65, 85, 99);
   margin-right: 1em;
 }
 
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
 
 @media (min-width: 992px) { 
 
