--- a/views/filter.html
+++ b/views/filter.html
@@ -15,8 +15,76 @@
     <input class="form-check-input" type="checkbox" id="checkbox2" value="option2">
     <label class="form-check-label" for="checkbox2">Industria</label>
   </div>
-  <div id="section"></div>
-  <div id="section-2"></div>
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Filtros</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group hide" id="company"  >
+                <label for="exampleFormControlSelect1">Empresa</label>
+                <select class="form-control company-select" id="exampleFormControlSelect1">
+                  <option value="c1">APM Terminals Insland Services S.A.</option>
+                  <option value="c2">Papelera Nacional S.A. - PANASA</option>
+                  <option value="c3">Sociedad Agrícola Drokasa S.A.</option>
+                  <option value="c4">Hoteles Sheraton del Perú S.A.C.</option>
+                  <option value="c5">Enel Distribución Perú S.A.A</option>
+                  <option value="c6">APM Terminals Callao S.A.</option>
+                  <option value="c7">Luz del Sur. S.A.</option>
+                  <option value="c8">Statkraft Perú S.A.</option>
+                  <option value="c9">Red de Energía del Perú S.A.</option>
+                  <option value="c10">Club Regatas Lima</option>
+                  <option value="c11">Electro Dunas S.A.A.</option>
+                  <option value="c12">Edelnor S.A.A.</option>
+                </select>
+              </div>
+          <div class="form-group hide"  id="select-syndicates">
+            <label for="select-2">Sindicato</label>
+            <select class="form-control" id="select-2">
+              <option value="s-1" class=".option">STAPMTIS</option>
+              <option value="s-2" class=".option">SINTRAPANA</option>
+              <option value="s-3" class=".option">SINTRAGROKASA</option>
+              <option value="s-4" class=".option">SINTRAHOSHEP</option>
+              <option value="s-5" class=".option">SUTRAEAC</option>
+              <option value="s-6" class=".option">SUTRAMPORPC</option>
+              <option value="s-7" class=".option">SUTEECEA</option>
+              <option value="s-8" class=".option">SITSTATKRAFT</option>
+              <option value="s-9" class=".option">SUTREL</option>
+              <option value="s-10" class=".option">SUTREP</option>
+              <option value="s-11" class=".option">SINTRASUR</option>
+              <option value="s-12" class=".option">SINERELIMA</option>
+              <!-- <option>SINORELIMA</option>
+              <option>SINEDUNAS</option>
+              <option>SECCIÓN SINDICAL DE SUTREL</option>
+              <option>SINTRAGEL</option>
+              <option>SITECASA</option>
+              <option>SINTRACLUNA</option>
+              <option>SINTRAAOPIP</option> -->
+            </select>
+          </div>
+          <div class="form-group hide"  id="select-industries">
+            <label for="select-3">Industria</label>
+            <select class="form-control" id="select-3">
+              <option value="i-1">Logistica y transporte</option>
+              <option value="i-2">Papel y derivados</option>
+              <option value="i-3">Agroindustria</option>
+              <option value="i-4">Hoteles</option>
+              <option value="i-5">Energía</option>
+              <option value="i-6">Clubes</option>
+            </select>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-primary">Filtrar</button>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="../js/filter.js"></script>
