--- a/views/home.html
+++ b/views/home.html
@@ -116,7 +116,7 @@
   <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
 </div>
 <div class="container"  >
-  <div class="row" id="container-box" >
+  <div class="row" id="container-box" ></div>
   
 
     <!-- Modal -->
@@ -195,7 +195,7 @@
             </select>
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal" id="filter-type">Filtrar</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal"  id="filter-type">Filtrar</button>
           </div>
         </div>
         </div>
