--- a/views/home.html
+++ b/views/home.html
@@ -184,7 +184,7 @@
           </div>
           <div class="form-group hide" id="suscripcion">
             <label for="exampleFormControlSelect3">Suscripción</label>
-            <select class="form-control" id="exampleFormControlSelect4">
+            <select class="form-control" id="suscripcion1">
               <option>2018</option>
               <option>2017</option>
               <option>2016</option>
@@ -194,7 +194,7 @@
             </select>
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-primary">Filtrar</button>
+              <button type="button" class="btn btn-primary" id="filter-type">Filtrar</button>
           </div>
         </div>
         </div>
