--- a/views/home.html
+++ b/views/home.html
@@ -37,6 +37,10 @@
 <div>
   <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
 </div>
+<br>
+<div>
+    <button class="btn btn-primary" id="comparar" >Comparar</button>
+  </div>
 <div class="container"  >
   <div class="row" id="container-box" >
 
