--- a/views/home.html
+++ b/views/home.html
@@ -67,15 +67,15 @@
   <nav class="navbar navbar-light justify-content-between d-none d-sm-block">
       <a class="navbar-brand">
       <img src="../assets/docs/logo-white.png" alt="" class="logo-white"> </a>
-      <form class="form-inline">
+      <form class="form-inline right">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
+        <button class="btn btn-comparar" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
       </form>
     </nav>
 
   <!--imagen-->
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-12 img-mobile">
         <p class="text-blue-miranda">Creando acciones conjuntas para el beneficio mutuo</p>
@@ -84,40 +84,50 @@
   </div>
 
   <!--Búsqueda y comparación-->
-
-  <div class="container">
-      <div class="row">
-        <div class="col-12 display-container">
-          <i class="fas fa-plus-circle icon-plus"></i>
-          <button class="btn btn-primary btn-comparar">
-            Comparar
-          </button>
-  
-        </div>
+<div class="over container  mt-3">
+  <div class="float-r">
+    
+        <div class="form-check form-check-inline pt-2">
+            <input class="form-check-input" type="checkbox" value="" id="company-check">
+            <label class="form-check-label" for="company-check">Empresa</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="checkbox1" value="option1">
+            <label class="form-check-label" for="checkbox1">Sindicato</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="checkbox2" value="option2">
+            <label class="form-check-label" for="checkbox2">Industria</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" id="suscription-check">
+            <label class="form-check-label" for="checkbox3">Suscripción</label>
+          </div>
+      <div class="float-r" >
+        <button class="btn btn-border" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
       </div>
     </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" value="" id="company-check">
-      <label class="form-check-label" for="company-check">Empresa</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="checkbox1" value="option1">
-      <label class="form-check-label" for="checkbox1">Sindicato</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="checkbox2" value="option2">
-      <label class="form-check-label" for="checkbox2">Industria</label>
-    </div>
-    <div class="form-check form-check-inline">
-      <input class="form-check-input" type="checkbox" id="suscription-check">
-      <label class="form-check-label" for="checkbox3">Suscripción</label>
-    </div>
-<div>
-  <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
+   
 </div>
-<div class="container"  >
+
+  <div class="container">
+    
+      <div class="row">
+          <div class="col-12 display-container mb-3">
+              <i class="fas fa-plus-circle icon-plus"></i>
+              <button class="btn  btn-comparar">
+                Comparar
+              </button>
+      
+            </div>
+      </div>
+        
+      
+    </div>
+    
+<div class="container">
   <div class="row" id="container-box" ></div>
-  
+</div>
 
     <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
