--- a/views/home.html
+++ b/views/home.html
@@ -85,6 +85,7 @@
   <!--Búsqueda y comparación-->
 <div class="over container  mt-3">
   <div class="float-r">
+     
     
         <div class="form-check form-check-inline pt-2">
             <input class="form-check-input" type="checkbox" value="" id="company-check">
@@ -103,7 +104,7 @@
             <label class="form-check-label" for="checkbox3">Suscripción</label>
           </div>
       <div class="float-r" >
-        <button class="btn btn-border" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
+        <button class="btn btn-border" data-toggle="modal" data-target="#exampleModal" >Filtrar</button>
       </div>
     </div>
    
