--- a/views/home.html
+++ b/views/home.html
@@ -83,7 +83,7 @@
   </div>
 
   <!--Búsqueda y comparación-->
-<div class="over container  mt-3">
+<div class="over container  mt-3 d-none d-sm-block">
   <div class="float-r">
      
     
