--- a/views/home.html
+++ b/views/home.html
@@ -103,6 +103,10 @@
             <input class="form-check-input" type="checkbox" id="suscription-check">
             <label class="form-check-label" for="checkbox3">Suscripción</label>
           </div>
+          <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="vigencia-check">
+              <label class="form-check-label" for="checkbox3">Vigencia</label>
+            </div>
       <div class="float-r" >
         <button class="btn btn-border" data-toggle="modal" data-target="#exampleModal" >Filtrar</button>
       </div>
@@ -206,6 +210,18 @@
               <option>2013</option>
             </select>
           </div>
+          <div class="form-group hide" id="vigencia">
+              <label for="exampleFormControlSelect3">Suscripción</label>
+              <select class="form-control" id="vigencia1">
+                  <option value="">Selecciona un año</option>
+                <option value="2018">2018</option>
+                <option value="2017">2017</option>
+                <option value="2016">2016</option>
+                <option value="2015">2015</option>
+                <option value="2014">2014</option>
+                <option value="2013">2013</option>
+              </select>
+            </div>
           <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-dismiss="modal"  id="filter-type">Filtrar</button>
           </div>
