--- a/views/home.html
+++ b/views/home.html
@@ -20,14 +20,11 @@
     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        
-          <input class="form-control mr-sm-2 token-input" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" id="buscar" type="button">
+        <input class="form-control mr-sm-2 token-input" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0 buscar" type="button">
             <i class="fas fa-search"></i>
-          </button>
-      </form>
+
+        </button>
       
       <div class="btn-group grupo-filtro">
         <button type="button" class="btn filtro">Filtrar por</button>
@@ -67,8 +64,11 @@
       <a class="navbar-brand">
       <img src="../assets/docs/logo-white.png" alt="" class="logo-white"> </a>
       <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >Buscar</button>
+          <input class="form-control mr-sm-2 token-input" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0 buscar" type="button">
+              <i class="fas fa-search"></i>
+  
+          </button>
       </form>
     </nav>
 
