--- a/views/compare.html
+++ b/views/compare.html
@@ -31,7 +31,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <script type="text/javascript" src="../js/jquery.tokeninput.js"></script>
   <script src="../js/home.js"></script>
-  <script src="../js/app.js"></script>
+  <script src="../js/compare.js"></script>
 
 </body>
 </html>
