--- a/views/home.html
+++ b/views/home.html
@@ -118,7 +118,7 @@
     
       <div class="row">
           <div class="col-12 display-container mb-3">
-              <i class="fas fa-plus-circle icon-plus"></i>
+             <a href="formulario.html"><i class="fas fa-plus-circle icon-plus"></i></a> 
               <button class="btn  btn-comparar">
                 Comparar
               </button>
