--- a/views/home.html
+++ b/views/home.html
@@ -167,6 +167,7 @@
           <div class="form-group hide"  id="select-syndicates">
             <label for="select-2">Sindicato</label>
             <select class="form-control" id="select-2">
+              <option>Selecciona un Sindicato</option>
               <option>STAPMTIS</option>
               <option>SINTRAPANA</option>
               <option>SINTRAGROKASA</option>
@@ -191,7 +192,8 @@
           <div class="form-group hide"  id="select-industries">
             <label for="select-3">Industria</label>
             <select class="form-control" id="select-3">
-              <option>Logistica y transporte</option>
+              <option>Selecciona una Industria</option>
+              <option>Logística y transporte</option>
               <option>Papel y derivados</option>
               <option>Agroindustria</option>
               <option>Hoteles</option>
