--- a/views/home.html
+++ b/views/home.html
@@ -202,12 +202,13 @@
           <div class="form-group hide" id="suscripcion">
             <label for="exampleFormControlSelect3">Suscripción</label>
             <select class="form-control" id="suscripcion1">
-              <option>2018</option>
-              <option>2017</option>
-              <option>2016</option>
-              <option>2015</option>
-              <option>2014</option>
-              <option>2013</option>
+                  <option value="">Selecciona un año</option>
+                <option value="2018">2018</option>
+                <option value="2017">2017</option>
+                <option value="2016">2016</option>
+                <option value="2015">2015</option>
+                <option value="2014">2014</option>
+                <option value="2013">2013</option>
             </select>
           </div>
           <div class="form-group hide" id="vigencia">
