--- a/views/home.html
+++ b/views/home.html
@@ -115,7 +115,7 @@
       <div class="row">
           <div class="col-12 display-container mb-3">
               <i class="fas fa-plus-circle icon-plus"></i>
-              <button class="btn  btn-comparar">
+              <button class="btn  btn-comparar" id="comparar">
                 Comparar
               </button>
       
@@ -235,6 +235,8 @@
   <script type="text/javascript" src="../js/jquery.tokeninput.js"></script>
   <script src="../js/home.js"></script>
   <script src="../js/app.js"></script>
+  <script src="../js/compare.js"></script>
+
 
 </body>
 </html>
