--- a/views/home.html
+++ b/views/home.html
@@ -191,6 +191,7 @@
           <div class="form-group hide"  id="select-industries">
             <label for="select-3">Industria</label>
             <select class="form-control" id="select-3">
+                <option value="">Selecciona Industria</option>
               <option>Logistica y transporte</option>
               <option>Papel y derivados</option>
               <option>Agroindustria</option>
