--- a/css/main.css
+++ b/css/main.css
@@ -132,3 +132,25 @@ p.welcome {
    margin: 10px;
   }
 }
+.headline-divider2 {
+  display: block;
+  background-color: #f0f4f5;
+  border: 4px solid rgb(213, 120, 0);
+  width: 200px;
+  margin: 0 auto;
+}
+div#compare-box {
+  padding-left: 70px;
+}
+.mostazaborder{
+  background-color: #d57800;
+  color: white;
+  padding: 5px;
+}
+
+.whiteborder{
+  background-color: white;
+  color: #415563;
+  border: 2px solid #d57800;
+}
+
