--- a/views/compare.html
+++ b/views/compare.html
@@ -11,6 +11,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="../css/token-input.css" type="text/css" />
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/main.css">
+
     <title>Home</title>
 </head>
 
@@ -99,6 +101,51 @@
     <div class="container">
         <div class="row" id="compare-box"></div>
     </div>
+    <div class="container">
+            <div class="row">
+                <div class="col-10 ">
+                        <h5 class="text-center mostazaborder">Suscripción</h5>
+                   
+                        <br>
+                    <div class="row compare">
+
+                    </div>
+                </div>
+                <div class="col-10 ">
+                        <h5 class="text-center whiteborder">Bonificación</h5>
+                   
+                        <br>
+                    <div class="row Bonificación">
+
+                    </div>
+                </div>
+                <div class="col-10 ">
+                        <h5 class="text-center mostazaborder">Incremento</h5>
+                   
+                        <br>
+                    <div class="row Incremento">
+
+                    </div>
+                </div>
+       
+                <div class="col-10 ">
+                        <h5 class="text-center whiteborder">Sindicato</h5>
+                   
+                        <br>
+                    <div class="row Sindicato">
+
+                    </div>
+                </div>
+                <div class="col-10 ">
+                        <h5 class="text-center mostazaborder">Vigencia</h5>
+                   
+                        <br>
+                    <div class="row Vigencia">
+
+                    </div>
+                </div>
+             </div>
+        </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
         crossorigin="anonymous"></script>
