--- a/views/formulario.html
+++ b/views/formulario.html
@@ -29,46 +29,46 @@
             <div class="col-10 border-form">
               <form>
                 <div class="form-group row text-blue-miranda ">
-                  <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Suscripción:</label>
+                  <label for="suscripcion-new" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Suscripción:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm">
+                    <input type="email" class="form-control form-control-sm" id="suscripcion-new">
                   </div>
                 </div>
 
                 <div class="form-group row text-blue-miranda ">
-                  <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Vigencia:</label>
+                  <label for="vigencia-new" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Vigencia:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm">
+                    <input type="email" class="form-control form-control-sm" id="vigencia-new">
                   </div>
                 </div>
                 <div class="form-group row text-blue-miranda ">
-                  <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Empresa:</label>
+                  <label for="empresa-new" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Empresa:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm">
+                    <input type="email" class="form-control form-control-sm" id="empresa-new">
                   </div>
                 </div>
                 <div class="form-group row text-blue-miranda ">
-                  <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Sindicato:</label>
+                  <label for="sindicato-new" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Sindicato:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm">
+                    <input type="email" class="form-control form-control-sm" id="sindicato-new">
                   </div>
                 </div>
                 <div class="form-group row text-blue-miranda ">
-                  <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Industria:</label>
+                  <label for="industria-new" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Industria:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm">
+                    <input type="email" class="form-control form-control-sm" id="industria-new">
                   </div>
                 </div>
                 <div class="form-group row text-blue-miranda ">
-                  <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Incremento:</label>
+                  <label for="incremento-new" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Incremento:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm">
+                    <input type="email" class="form-control form-control-sm" id="incremento-new">
                   </div>
                 </div>
                 <div class="form-group row text-blue-miranda ">
-                  <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Bonificación:</label>
+                  <label for="bonificacion-new" class="col-sm-2 col-form-label col-form-label-sm font-desktop">Bonificación:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm">
+                    <input type="email" class="form-control form-control-sm" id="bonificacion-new">
                   </div>
                 </div>
 
@@ -80,7 +80,7 @@
                 </div>
               </div>
               <div class="container-register">
-                <button type="button" class="btn btn-registrar btn-block text-upper">Registrar </button>
+                <button type="button" class="btn btn-registrar btn-block text-upper" id="new-convenio">Registrar </button>
               </div>  
               
             </div>
