--- a/css/home.css
+++ b/css/home.css
@@ -12,6 +12,11 @@
   top: 7px;
 }
 
+embed{
+  height: 550px;
+  width: 100%;
+}
+
 /*Clases generales*/
 
 body, html, section {
@@ -163,6 +168,11 @@ hr {
   margin-left: 5px;
 }
 
+.logo-white {
+  width: 35%;
+  
+}
+
 /*Imagen*/
 
 .img-mobile {
@@ -223,6 +233,7 @@ hr {
 
   .navbar {
     background-color: rgb( 65, 85, 99);
+    display: block !important;
   }
 
   .img-mobile{
