--- a/views/compare.html
+++ b/views/compare.html
@@ -74,7 +74,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 img-mobile">
-        <p class="text-blue-miranda">Creando acciones conjuntas para el beneficio mutuo</p>
+        <p class="text-white">Creando acciones conjuntas para el beneficio mutuo</p>
       </div>
     </div>
   </div>
