--- a/views/detail.html
+++ b/views/detail.html
@@ -8,12 +8,16 @@
   <!--Importando bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/token-input.css" type="text/css" />
-  <link rel="stylesheet" href="../css/home.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <!-- <link rel="stylesheet" href="../css/home.css"> -->
+  <link rel="stylesheet" href="../css/detaill.css">
   <title>Home</title>
 </head>
 <body>
-    
+    <header>
+      <nav class="nav header">
+        <a class="nav-link" href="#"><img src="../assets/docs/logo-white.png" alt="" class="logo-white"></a>
+      </nav>
+    </header>
    
   
 
@@ -24,8 +28,14 @@
             <div class="mb-3">
               <div id="title"></div>
               <div class="block mt-5 mb-4">
-                  <i class="fas fa-plus-circle icon-plus"></i>
-                  <a href="home.html" class="btn m-0 rela">Volver</a>
+                  <a class="btn-add" href="formulario.html">Agregar Convenio</a>
+                  <a href="home.html" class="btn m-0 rela btn-comparar">Volver</a>
+
+                  <!-- <div class="col-12 display-container mb-3">
+                      <a class="btn-add" href="formulario.html">Agregar Convenio</a>
+                      <button class="btn btn-comparar">Comparar</button>
+                
+                      </div> -->
               </div>
               
             </div>
