--- a/views/formulario.html
+++ b/views/formulario.html
@@ -19,6 +19,7 @@
       <div class="container-fluid container-form">
         <div class="row">
           <div class="col-12 col-md-5 flex-logo">
+           <a href="home.html"><i class="fas fa-arrow-circle-left icono"></i></a>
             <img src="../assets/docs/logo.png" class="img-fluid logo mx-auto d-block" alt="Responsive image">
             <p class="text-center text-blue-miranda text-p  d-none d-sm-block">Enfocados en la prevención y solución de conflictos laborales.</p>
           </div>
