--- a/views/home.html
+++ b/views/home.html
@@ -220,7 +220,7 @@
               </select>
             </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal"  id="filter-type">Filtrar</button>
+              <button type="button" class="btn btn-primary btn btn-comparar" data-dismiss="modal"  id="filter-type">Filtrar</button>
           </div>
         </div>
         </div>
