--- a/css/home.css
+++ b/css/home.css
@@ -179,6 +179,7 @@ input[type=checkbox]
   background-color: white;
   border: 2px solid rgb(213, 120, 0);
   color: rgb(213, 120, 0);
+  padding:6px 43px;
 }
 
 .filtro-menu {
