--- a/views/compare.html
+++ b/views/compare.html
@@ -82,8 +82,8 @@
 
     <div class="row">
       <div class="col-12 display-container mb-3">
-        <a class="btn btn-comparar" id="ViewReport" href="javascript:window.print()">
-           Ver Reporte
+        <a class="btn btn-border" id="ViewReport" href="javascript:window.print()">
+            <i class="fas fa-print mr-3"></i>Imprimir
         </a>
 
       </div>
