--- a/css/home.css
+++ b/css/home.css
@@ -182,6 +182,10 @@ input[type=checkbox]
   padding:6px 43px;
 }
 
+.btn-border:hover{
+  color: rgb(213, 120, 0);
+}
+
 .filtro-menu {
   min-width: 100%;
 }
