--- a/views/compare.html
+++ b/views/compare.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/token-input.css" type="text/css" />
   <link rel="stylesheet" href="../css/home.css">
-
-  <title>Home</title>
+  <title>Miranda-amado</title>
 </head>
 <body>
 
@@ -99,30 +98,30 @@
     </div>
 
     <div class="row">
-      <div class="col-12 ">
-        <h5 class="text-center mostazaborder">Industria</h5>
+      <div class="col-12 Compar ">
+        <h5 class="text-center mostazaborder">INDUSTRIA</h5>
 
         <br>
         <div class="row Industria">
 
         </div>
       </div>
-      <div class="col-12 ">
-        <h5 class="text-center whiteborder">Suscripción</h5>
+      <div class="col-12 Compar">
+        <h5 class="text-center whiteborder">SUSCRIPCIÓN</h5>
         <br>
         <div class="row compare">
         </div>
       </div>
-      <div class="col-12 ">
-        <h5 class="text-center mostazaborder">Bonificación</h5>
+      <div class="col-12 Compar ">
+        <h5 class="text-center mostazaborder">BONIFICACIÓN</h5>
 
         <br>
         <div class="row Bonificación">
 
         </div>
       </div>
-      <div class="col-12 ">
-        <h5 class="text-center whiteborder">Incremento</h5>
+      <div class="col-12 Compar">
+        <h5 class="text-center whiteborder">INCREMENTO</h5>
 
         <br>
         <div class="row Incremento">
@@ -130,16 +129,16 @@
         </div>
       </div>
 
-      <div class="col-12 ">
-        <h5 class="text-center mostazaborder">Sindicato</h5>
+      <div class="col-12 Compar">
+        <h5 class="text-center mostazaborder">SINDICATO</h5>
 
         <br>
         <div class="row Sindicato">
 
         </div>
       </div>
-      <div class="col-12 ">
-        <h5 class="text-center whiteborder">Vigencia</h5>
+      <div class="col-12 Compar">
+        <h5 class="text-center whiteborder">VIGENCIA</h5>
 
         <br>
         <div class="row Vigencia">
