--- a/css/home.css
+++ b/css/home.css
@@ -184,6 +184,7 @@ input[type=checkbox]
   border: 2px solid rgb(213, 120, 0);
   color: rgb(213, 120, 0);
   padding:6px 43px;
+  margin-left: 5px;
 }
 
 .btn-border:hover{
@@ -288,6 +289,17 @@ input[type=checkbox]
 .box {
   margin: 0 8px 8px 0;
   padding: 0;
+}
+
+.volver {
+  background-color: rgb(213, 120, 0);
+  color:white;
+  border-radius: 3px;
+  padding: 5px 50px;
+}
+
+.volver:hover {
+  color:white;
 }
 
 @media (min-width: 992px) { 
