--- a/views/compare.html
+++ b/views/compare.html
@@ -82,12 +82,12 @@
 
     <div class="row">
       <div class="col-12 display-container mb-3">
+        <a href="home.html" class="btn volver">Volver</a>
         <a class="btn btn-border" id="ViewReport" href="javascript:window.print()">
-            <i class="fas fa-print mr-3"></i>Imprimir
-        </a>
-
+          <i class="fas fa-print mr-3"></i>Imprimir
+      </a>
       </div>
-    </div>
+    </div><br>
 
 
   </div>
