--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/token-input.css" type="text/css" />
   <link rel="stylesheet" href="../css/home.css">
-  <title>Home</title>
+  <title>Miranda-Amado</title>
 </head>
 <body>
 
@@ -70,12 +70,53 @@
 
   <!--imagen-->
 
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <div class="row">
       <div class="col-12 img-mobile">
         <p class="text-white">Creando acciones conjuntas para el beneficio mutuo</p>
       </div>
     </div>
+  </div> -->
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <!-- <div class="carousel-item active">
+        <img class="d-block w-100 carrusel-img img-fluid" src="http://globbpartner.com/wp-content/uploads/2016/04/digital.jpg" alt="First slide">
+      </div> -->
+      <div class="carousel-item active">
+        <img class="d-block w-100 carrusel-img img-fluid" src="../assets/images/law.jpeg" alt="Third slide">
+        <div class="opacity"></div>
+        <div class="carousel-caption d-none d-md-block">
+          <p class="text-white">Creando acciones conjuntas para el beneficio mutuo</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100 carrusel-img img-fluid" src="../assets/images/doc4.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <p class="text-white">Cuando nuestros clientes solicitan asesoría de nuestros socios, en realidad la reciben de todo un equipo.</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100 carrusel-img img-fluid" src="../assets/images/doc3.jpg" alt="Third slide">
+        
+        <div class="carousel-caption d-none d-md-block">
+          <p class="text-white">Actuamos responsablemente en relación con la sociedad y el planeta en que vivimos.</p>
+          </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
   <!--Búsqueda y comparación-->
