--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <div class="collapse navbar-collapse navbar-mobile" id="navbarTogglerDemo01">
         <!-- <input class="form-control mr-sm-2 token-input" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0 buscar" type="button">
             <i class="fas fa-search"></i>
@@ -30,7 +30,7 @@
         <button type="button" class="btn dropdown-toggle dropdown-toggle-split filtro-arrow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="sr-only">Toggle Dropdown</span>
         </button>
-        <div class="dropdown-menu filtro-menu">
+        <div class="dropdown-menu filtro-menu dropdown-menu-right">
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" id="customCheck1">
             <label class="custom-control-label text-blue-miranda" for="customCheck1">Suscripción</label>
