--- a/views/compare.html
+++ b/views/compare.html
@@ -99,10 +99,6 @@
         <div class="carousel-caption d-none d-md-block">
           <p class="text-white">Actuamos responsablemente en relación con la sociedad y el planeta en que vivimos.</p>
           </div>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12 img-mobile">
-        <p class="text-blue-miranda">Creando acciones conjuntas para el beneficio mutuo</p>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -114,6 +110,15 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+  <!-- <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 img-mobile">
+        <p class="text-blue-miranda">Creando acciones conjuntas para el beneficio mutuo</p>
+      </div>
+    </div>
+  </div> -->
+
+
   <div class="container">
 
     <div class="row">
