--- a/views/compare.html
+++ b/views/compare.html
@@ -121,13 +121,13 @@
 
   <div class="container">
 
-    <div class="row">
+    <div class="row mr-0">
       <div class="col-12 display-container mb-3">
         <button class="btn  btn-comparar" id="ViewReport">
            Ver Reporte
         </button>
 
-        <a href="home.html" class="btn volver">Volver</a>
+        <!-- <a href="home.html" class="btn volver">Volver</a> -->
         <a class="btn btn-border" id="ViewReport" href="javascript:window.print()">
           <i class="fas fa-print mr-3"></i>Imprimir
       </a>
@@ -139,55 +139,55 @@
   <div id="muestra"> 
       
   <div class="container">
-    <div class="row" id="compare-box">
+    <div class="row mr-0" id="compare-box">
 
     </div>
 
-    <div class="row">
+    <div class="row mr-0">
       <div class="col-12 Compar ">
-        <h5 class="text-center mostazaborder">INDUSTRIA</h5>
+        <h5 class="text-center grey">INDUSTRIA</h5>
 
         <br>
-        <div class="row Industria">
+        <div class="row Industria  mr-0">
 
         </div>
       </div>
-      <div class="col-12 Compar">
-        <h5 class="text-center whiteborder">SUSCRIPCIÓN</h5>
+      <div class="col-12 ">
+        <h5 class="text-center grey">SUSCRIPCIÓN</h5>
         <br>
-        <div class="row compare">
+        <div class="row compare mr-0">
         </div>
       </div>
       <div class="col-12 Compar ">
-        <h5 class="text-center mostazaborder">BONIFICACIÓN</h5>
+        <h5 class="text-center grey">BONIFICACIÓN</h5>
 
         <br>
-        <div class="row Bonificación">
+        <div class="row Bonificación mr-0">
 
         </div>
       </div>
       <div class="col-12 Compar">
-        <h5 class="text-center whiteborder">INCREMENTO</h5>
+        <h5 class="text-center grey">INCREMENTO</h5>
 
         <br>
-        <div class="row Incremento">
+        <div class="row Incremento mr-0">
 
         </div>
       </div>
 
       <div class="col-12 Compar">
-        <h5 class="text-center mostazaborder">SINDICATO</h5>
+        <h5 class="text-center grey">SINDICATO</h5>
 
         <br>
-        <div class="row Sindicato">
+        <div class="row Sindicato mr-0">
 
         </div>
       </div>
       <div class="col-12 Compar">
-        <h5 class="text-center whiteborder">VIGENCIA</h5>
+        <h5 class="text-center grey">VIGENCIA</h5>
 
         <br>
-        <div class="row Vigencia">
+        <div class="row Vigencia mr-0">
 
         </div>
       </div>
