--- a/css/home.css
+++ b/css/home.css
@@ -294,9 +294,14 @@ input[type=checkbox]
 }
 
 .Compar {
-  background-color: rgb(214, 222, 236);
+
   padding: 0;
   margin-bottom: 10px;
+}
+
+.grey{
+  background-color: #E0E0E0;
+  padding: .5em;
 }
 
 .box {
@@ -359,4 +364,6 @@ input[type=checkbox]
 }
 
 
-
+.bold-none{
+  font-weight: 400;
+}
