juntando todos los avances

--- a/views/compare.html
+++ b/views/compare.html
@@ -98,7 +98,7 @@
 
     <div class="row mr-0 ml-0">
       <div class="col-12 display-container mb-3">
-        <a class="btn  btn-comparar text-white" id="ViewReport">
+        <a class="btn  btn-comparar" id="ViewReport">
           <i class="far fa-arrow-alt-circle-down mr-3"></i>Descargar
         </a>
         <!-- <a href="home.html" class="btn volver">Volver</a> -->
@@ -119,7 +119,7 @@
 
     <div class="row mr-0">
       <div class="col-12 Compar ">
-        <h5 class="text-center grey">INDUSTRIA</h5>
+        <h5 class="text-center grey text-blue-miranda">INDUSTRIA</h5>
 
         <br>
         <div class="row Industria  mr-0">
@@ -127,13 +127,13 @@
         </div>
       </div>
       <div class="col-12 ">
-        <h5 class="text-center grey">SUSCRIPCIÓN</h5>
+        <h5 class="text-center grey text-blue-miranda">SUSCRIPCIÓN</h5>
         <br>
         <div class="row compare mr-0">
         </div>
       </div>
       <div class="col-12 Compar ">
-        <h5 class="text-center grey">BONIFICACIÓN</h5>
+        <h5 class="text-center grey text-blue-miranda">BONIFICACIÓN</h5>
 
         <br>
         <div class="row Bonificación mr-0">
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="col-12 Compar">
-        <h5 class="text-center grey">INCREMENTO</h5>
+        <h5 class="text-center grey text-blue-miranda">INCREMENTO</h5>
 
         <br>
         <div class="row Incremento mr-0">
@@ -150,7 +150,7 @@
       </div>
 
       <div class="col-12 Compar">
-        <h5 class="text-center grey">SINDICATO</h5>
+        <h5 class="text-center grey text-blue-miranda">SINDICATO</h5>
 
         <br>
         <div class="row Sindicato mr-0">
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="col-12 Compar">
-        <h5 class="text-center grey">VIGENCIA</h5>
+        <h5 class="text-center grey text-blue-miranda">VIGENCIA</h5>
 
         <br>
         <div class="row Vigencia mr-0">
