--- a/css/home.css
+++ b/css/home.css
@@ -6,11 +6,11 @@
 }
 
 .carousel {
-  height:450px ;
+  height:350px ;
 }
 
 .carrusel-img {
-  height:400px;
+  height:330px;
   
 }
 
@@ -196,20 +196,19 @@ input[type=checkbox]
 
 .filtro, .filtro-arrow .busqueda, .btn-filtro, .btn-comparar {
   background-color: rgb(213, 120, 0);
-  color: #ffffff;
   border: none;
 }
 
 .btn-comparar{
   padding: 7px 20px;
   background-color: rgb(213, 120, 0);
+  color: #ffffff !important;  
 }
 
 .btn-border{
   background-color: white;
   border: 2px solid rgb(213, 120, 0);
   color: rgb(213, 120, 0);
-  padding:6px 43px;
   margin-left: 5px;
 }
 
@@ -360,6 +359,24 @@ input[type=checkbox]
 
   .carrusel-img {
     height: 450px;
+  }
+
+  .carousel {
+    height: 450px;
+  }
+
+  .btn-border {
+    background-color: white;
+    border: 2px solid rgb(213, 120, 0);
+    color: rgb(213, 120, 0);
+    padding: 6px 43px;
+    margin-left: 5px;
+  }
+
+  .btn-comparar {
+    background-color: rgb(213, 120, 0);
+    color: #ffffff;
+    border: none
   }
 }
 
