--- a/views/detail.html
+++ b/views/detail.html
@@ -15,7 +15,7 @@
 <body>
     <header>
       <nav class="nav header">
-        <a class="nav-link" href="#"><img src="../assets/docs/logo-white.png" alt="" class="logo-white"></a>
+        <a class="nav-link" href="home.html"><img src="../assets/docs/logo-white.png" alt="" class="logo-white"></a>
       </nav>
     </header>
    
