--- a/views/home.html
+++ b/views/home.html
@@ -60,7 +60,7 @@
   <!--nav desktop-->
 
   <nav class="navbar navbar-light justify-content-between d-none d-lg-block">
-      <a class="navbar-brand">
+      <a class="navbar-brand" href="home.html">
       <img src="../assets/docs/logo-white.png" alt="" class="logo-white"> </a>
       <div class="form-inline right">
         <input class="form-control mr-sm-2 token-input" type="search" placeholder="Search" aria-label="Search">
